[gd_scene load_steps=9 format=3 uid="uid://dxji71bf60xli"]

[ext_resource type="Script" path="res://levels/witch.gd" id="1_l1gbf"]
[ext_resource type="Texture2D" uid="uid://wacg8a64cbja" path="res://assets/background.png" id="2_i4f3c"]
[ext_resource type="Texture2D" uid="uid://wt1a4j17ml30" path="res://assets/witch.png" id="3_niw5f"]
[ext_resource type="PackedScene" uid="uid://c3054shdv3crb" path="res://objects/tabs.tscn" id="4_fkpu7"]
[ext_resource type="Script" path="res://levels/witchColor.gd" id="4_yf1lx"]
[ext_resource type="Texture2D" uid="uid://ciu71rb8mvx85" path="res://assets/arrowLeft.png" id="5_5cymv"]
[ext_resource type="Texture2D" uid="uid://2wwghnulpiub" path="res://assets/arrowRight.png" id="6_1ngq7"]
[ext_resource type="PackedScene" uid="uid://okdqvfq5ga1c" path="res://objects/overlay.tscn" id="9_i1al8"]

[node name="witch" type="Node2D"]
script = ExtResource("1_l1gbf")

[node name="canvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="background" type="Sprite2D" parent="canvasLayer"]
position = Vector2(375, 375)
texture = ExtResource("2_i4f3c")

[node name="witch" type="Sprite2D" parent="canvasLayer"]
position = Vector2(375, 254)
texture = ExtResource("3_niw5f")

[node name="witchColor" type="ColorRect" parent="canvasLayer"]
offset_left = 544.0
offset_top = 554.0
offset_right = 640.0
offset_bottom = 651.0
script = ExtResource("4_yf1lx")

[node name="arrowRight" type="TextureButton" parent="canvasLayer"]
offset_left = 650.0
offset_top = 309.0
offset_right = 690.0
offset_bottom = 349.0
texture_normal = ExtResource("6_1ngq7")

[node name="tabs" parent="canvasLayer" instance=ExtResource("4_fkpu7")]
position = Vector2(0, 74)

[node name="arrowLeft" type="TextureButton" parent="canvasLayer"]
offset_left = 16.0
offset_top = 309.0
offset_right = 98.0
offset_bottom = 391.0
texture_normal = ExtResource("5_5cymv")

[node name="overlay" parent="canvasLayer" instance=ExtResource("9_i1al8")]

[connection signal="pressed" from="canvasLayer/arrowRight" to="." method="_on_arrow_right_pressed"]
[connection signal="pressed" from="canvasLayer/arrowLeft" to="." method="_on_arrow_left_pressed"]
